loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:7: error: value prendBiscuit is not a member of Unit
possible cause: maybe a semicolon is missing before `value prendBiscuit'?
  }prendBiscuit()
   ^